--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -45,22 +45,28 @@ body {
 .file {
     margin-bottom: 10px;
     margin-top: 10px;
+    display: flex;
 }
 
-.file button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background-color: #333;
-    color: #fff;
-    border-radius: 4px;
-    text-align: left;
-    cursor: pointer;
+.file a{
+    justify-content: flex-end;
 }
 
-.file button:hover {
-    background-color: #555;
-}
+    .file button, .file div {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        background-color: #333;
+        color: #fff;
+        border-radius: 4px;
+        text-align: left;
+        cursor: pointer;
+        display: flex;
+    }
+
+    .file button:hover, .file div:hover {
+        background-color: #555;
+    }
 
 .file-selected button:hover {
     background-color: #888
