--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
                                                         <a asp-action="ChatDelete" class="submenu-link text-danger ">Delete</a>
                                                     </li>
                                                     <li class="submenu-item">
-                                                        <a asp-action="ChatRename" class="submenu-link">Rename</a>
+                                                        <a asp-action="ChatRename" class="submenu-link" data-state="closed" data-bs-toggle="modal" data-bs-target="#renameModal">Rename</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -203,6 +203,30 @@
                         </div>
                         <div class="custom-form">
                             <div class="custom-label">Scrivi i tags (usa ; per separarli)</div>
+                            <input asp-for="UploadDocument.MetaData" type="text" class="form-control custom-input">
+                        </div>
+                    </div>
+                    <div class="modal-footer custom-modal-footer">
+                        <button type="submit" class="btn btn-primary custom-submit-button" id="modalSubmitButton">Invia</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    @*  POPUP PER APRIRE RENAME DELLE CHAT *@
+    <div class="modal fade" id="renameModal" tabindex="-1" aria-labelledby="renameModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content custom-modal-content">
+                <div class="modal-header custom-modal-header">
+                    <img src="~/img/logo_full_no_nome.svg" alt="logo" class="logo">
+                    <h5 class="modal-title" id="renameModalLabel">Rinomina la chat</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form enctype="multipart/form-data" method="post" asp-action="DocumentPost">
+                    <div class="modal-body custom-modal-body">
+                        <div class="custom-form">
+                            <div class="custom-label">Scrivi il nuovo nome della chat</div>
                             <input asp-for="UploadDocument.MetaData" type="text" class="form-control custom-input">
                         </div>
                     </div>
