--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -427,6 +427,7 @@ footer {
     color: gainsboro;
     padding: 7px 0;
     font-size: 14px;
+    text-decoration: none;
 }
 
     .submenu .submenu-link:hover {
