--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -57,15 +57,13 @@
                 <div class="col-md-6 d-none d-md-block sidebar">
                     <div class="sidebar-top">
 
-
-                        <div class="row">
-                            <div class="col-sm w-50">
-                                <button class="sidebar-btn" id="chatBtn">Chat</button>
-                            </div>
-                            <div class="col-sm w-50">
-                                <button class="sidebar-btn" id="fileBtn">File</button>
-                            </div>
-                        </div>
+                            <button class="sidebar-btn" id="chatBtn">
+                                <img src="img/chat_icon.svg" alt="Chat Icon"> Chat
+                            </button>
+                            <button class="sidebar-btn" id="fileBtn">
+                                <img src="img/file_icon.svg" alt="File Icon"> File
+                            </button>
+                        
                     </div>
                     <div class="sidebar-bot">
 
@@ -119,54 +117,63 @@
                 <!---------------MESSAGGI CHAT--------->
 
                 <div class="col-md-6 d-flex flex-column p-0 chat">
-                    <main class="content flex-grow-1 ">
-                        <div class="chat flex-grow-1 p-3">
-                            @if (Model.SelectedChat != null && Model.SelectedChat.Messages != null)
-                            {
-                                for (int i = 0; i < Model.SelectedChat.Messages.Count; i++)
-                                {
-                                    var message = Model.SelectedChat.Messages[i];
-                                    if (message.Role == client.Enum.ChatRole.USER) // User message
+
+                    <div class="h-100">
+                        <div class="d-flex justify-content-center">
+                            <main class="content ">
+                                <div class="chat flex-grow-1 p-3">
+                                    @if (Model.SelectedChat != null && Model.SelectedChat.Messages != null)
                                     {
-                                        <div class="message d-flex">
-                                            <span>@message.Text</span>
-                                        </div>
-                                    }
-                                    else // Bot message
-                                    {
-                                        <div class="response d-flex">
-                                            <span>
-                                                @message.Text
-                                                <div class="tag-group">
-                                                    @if (message.DocumentChunksUniqueNames != null)
-                                                    {
-                                                        <div class="response">
-                                                            @foreach (var chunkName in message.DocumentChunksUniqueNames)
+                                        for (int i = 0; i < Model.SelectedChat.Messages.Count; i++)
+                                        {
+                                            var message = Model.SelectedChat.Messages[i];
+                                            if (message.Role == client.Enum.ChatRole.USER) // User message
+                                            {
+                                                <div class="message d-flex">
+                                                    <span>@message.Text</span>
+                                                </div>
+                                            }
+                                            else // Bot message
+                                            {
+                                                <div class="response d-flex">
+                                                    <span>
+                                                        @message.Text
+                                                        <div class="tag-group">
+                                                            @if (message.DocumentChunksUniqueNames != null)
                                                             {
-                                                                <div class="tag">
-                                                                    @chunkName
+                                                                <div class="response">
+                                                                    @foreach (var chunkName in message.DocumentChunksUniqueNames)
+                                                                    {
+                                                                        <div class="tag">
+                                                                            @chunkName
+                                                                        </div>
+                                                                    }
                                                                 </div>
                                                             }
                                                         </div>
-                                                    }
+                                                    </span>
                                                 </div>
-                                            </span>
-                                        </div>
+                                            }
+                                        }
                                     }
-                                }
-                            }
+                                </div>
+                            </main>
                         </div>
-                    </main>
-                    <div />
-                    <div class="bottom-part">
-                        <div class="input-container">
-                            <button id="attachButton" class="attach-button" type="button" aria-haspopup="menu" aria-expanded="false" data-state="closed" data-bs-toggle="modal" data-bs-target="#fileModal">
-                                📎
-                            </button>
-                            <form asp-action="MessagePost" method="post">
-                                <input type="text" placeholder="Invia un messaggio" class="input-field" asp-for=Message />
-                                <button class="send-button">↥</button>
-                            </form>
+                    </div>
+                    
+                    <div class="d-flex justify-content-center">
+                        <div class="bottom-part">
+                            <div class="input-container">
+                                <button id="attachButton" class="attach-button" type="button" aria-haspopup="menu" aria-expanded="false" data-state="closed" data-bs-toggle="modal" data-bs-target="#fileModal">
+                                    <img src="img/attach_file_icon.svg" alt="File Icon">
+                                </button>
+                                <form asp-action="MessagePost" method="post" class="input-form">
+                                    <input type="text" placeholder="Invia un messaggio" class="input-field" asp-for=Message />
+                                    <button class="send-button">
+                                        <img src="img/top_arrow_icon.svg" alt="File Icon">
+                                    </button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
