--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -12,20 +12,16 @@ body {
 
 .sidebar {
     padding: 0;
-    width: 350px;
-}
-
-.sidebar-top {
-    background-color: #1a1a1a;
-    height: 6vh;
-    flex-direction: column;
-    padding: 20px;
-    position: relative;
+    margin: 1rem;
+    border-radius: 2rem;
+    width: 300px;
+    height 90%;
 }
 
 .sidebar-bot {
     background-color: #212121;
-    height: 94vh;
+    height: 90vh;
+    border-radius: 0 0 1rem 1rem;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -33,8 +29,45 @@ body {
     position: relative;
 }
 
+.sidebar-top {
+    background-color: #1a1a1a;
+    height: 6vh;
+    border-radius: 1rem 1rem 0 0;
+    padding: 0;
+    align-items:end;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sidebar-btn {
+    width: 145px;
+    height: 50px;
+    background-color: #212121;
+    color: #fff;
+    border: none;
+    border-radius: 1rem 1rem 0 0;
+    cursor: pointer;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease;
+    position: relative; /* Cambiato per gestire meglio le posizioni */
+    padding: 0 10px;
+}
+
+    .sidebar-btn img {
+        margin-right: 10px; /* Spazio tra immagine e testo */
+    }
+
+    .sidebar-btn:hover {
+        background-color: #555;
+    }
+
+
 .newChat {
     margin-bottom: 20px;
+    width: 70%;
 }
 
 .cronologia {
@@ -69,44 +102,16 @@ body {
     background-color: #888
 }
 
-.sidebar-buttons {
-    position: absolute;
-    top: 0;
-    right: -60px; /* Adjusted to align buttons next to the sidebar */
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: center;
-    gap: 10px;
-}
-
-.sidebar-btn {
-    width: 140px;
-    height: 40px;
-    background-color: #212121;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.3s ease;
-    position: absolute;
-    bottom: 0px;
-}
-
-.sidebar-btn:hover {
-    background-color: #555;
-}
 
 .content {
     display: inline-block;
     flex-direction: column;
     justify-content: space-between;
     background-color: #121212;
-    
+    width: 75%;
+    padding: 0;
+    margin:0;
+    height:80%;
 }
 
 .chat {
@@ -124,8 +129,8 @@ body {
 
 .message {
     background-color: #222;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 0.7rem 1.2rem 0.7rem 1.2rem;
+    border-radius: 2rem;
     margin-bottom: 10px;
     max-width: 70%;
     word-wrap: break-word;
@@ -134,8 +139,8 @@ body {
 
 .response {
     background-color: #333;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 0.7rem 1.2rem 0.7rem 1.2rem;
+    border-radius: 2rem;
     margin-bottom: 10px;
     max-width: 70%;
     word-wrap: break-word;
@@ -147,14 +152,38 @@ footer {
     padding: 10px;
 }
 
-.input-container {
+form {
     display: flex;
     justify-content: center;
-    background-color: #333;
-    border-radius: 20px;
-    padding: 5px;
-    font-size: 20px;
 }
+
+.input-form{
+    width: 100%;
+}
+
+.input-container {
+    display: flex;
+    background-color: #333;
+    border-radius: 2rem;
+    font-size: 20px;
+    height: 100%;
+    padding: 0.6rem;
+    justify-content: left;
+    align-items:center;
+    align-content:center;
+
+}
+
+.input-container img {
+    width: 30px;
+    height: 30px;
+}
+
+.input-container form input {
+   width:100%;
+}
+
+
 
 .attach-button, .send-button {
     background: none;
@@ -357,8 +386,11 @@ footer {
 }
 
 .bottom-part{
-    width: 100%;
-    height: 2.5rem;
+    width: 70%;
+    height: 4rem;
+    padding: 0;
+    margin: 0.3rem;
+
 }
 
 ::-webkit-scrollbar {
@@ -378,3 +410,4 @@ footer {
     ::-webkit-scrollbar-thumb:hover {
         background: #555;
     }
+
